--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "helmet": "^3.15.1",
+    "jsonwebtoken": "^8.5.0",
     "knex": "^0.16.3",
     "sqlite3": "^4.0.6"
   },
